@@ -1,3 +1,8 @@
+2006-10-10  Manish Singh  <yosh@gimp.org>
+
+	* plug-ins/pygimp/pygimp-colors.c: Add slice support to the colors
+	types. Fixes bug #360423.
+
 2006-10-10  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/common/nova.c: applied patch from Aurimas Juška that
